tests/pos/todo/unions/test-10.ts

/*@ foo :: (x: number) => { number + boolean | ttag v = ttag x } */
function foo(x: number): number {
    return x;
}
